--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Vidip Mankala",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "cleverbot-free": "^1.0.5",
     "eris": "^0.14.0"
   }
